--- a/10H/10H/Content/search.css
+++ b/10H/10H/Content/search.css
@@ -139,6 +139,7 @@ dd , p{
 
 .logo{
      background: url("Ressources/Images/logo.png") no-repeat top left;
+     background-color: transparent;
      display: block;
      width: 50px;
      height: 50px;
