--- a/10H/10H/Views/Shared/_Musics.cshtml
+++ b/10H/10H/Views/Shared/_Musics.cshtml
@@ -8,7 +8,7 @@
         window.location.href = "/Order/Buy/"+id;
     }
     function goToDetails(id) {
-        window.location.href = '/AdminMusic/Details/' + id;
+        window.location.href = '/Music/Details/' + id;
     }
 </script>
 
