--- a/10H/10H/Views/Order/Index.cshtml
+++ b/10H/10H/Views/Order/Index.cshtml
@@ -42,7 +42,7 @@
             </td>
             <td>
                 <audio controls>
-                    <source src="@Url.Action("Play", new { musicId = item.Number })" type="audio/mp3" />
+                    <source src="@Url.Action("Play", "Music", new { musicId = item.Number, path = "Musics" })" type="audio/mp3" />
                     <p>Your browser does not support HTML 5 audio element</p>
                 </audio>
                 @Html.ActionLink("Edit", "Edit", new { id = item.ID }) |
