--- a/10H/10H/Views/Comment/AddComment.cshtml
+++ b/10H/10H/Views/Comment/AddComment.cshtml
@@ -7,10 +7,9 @@
 @Scripts.Render("~/bundles/jquery")
 @Scripts.Render("~/bundles/bootstrap")
 <script type="text/javascript">
-    function AddComment(Musicid) {
-        var comment = document.getElementById('comment').value;
+    function DeleteComment(Musicid) {
 
-        window.location.href = "/Comment/AddComment?MusicID=" + Musicid + "&comment=" + comment;
+        window.location.href = "/Comment/Delete/" + Musicid ;
 
     }
 </script>
@@ -87,7 +86,7 @@
             <textarea readonly id="comment">@item.Comments</textarea> 
             @if (Request.Cookies["UserId"]["roleId"].Equals("1") )
             {
-                <p><a class="btn btn-default btn-comment" onclick="">Delete !</a></p>
+                <p><a class="btn btn-default btn-comment" onclick="DeleteComment(@item.ID)">Delete !</a></p>
             }
             
     </div>
@@ -100,7 +99,6 @@
 </div>
 
 <p style="text-align:center;color:#333333">
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Music.ID }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "Index","Music")
 </p>
 
