--- a/10H/10H/Views/AdminAlbum/Index.cshtml
+++ b/10H/10H/Views/AdminAlbum/Index.cshtml
@@ -9,7 +9,7 @@
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
-<table class="table">
+<table class="table jumbotron">
     <tr>
         <th>Album</th>
         <th>Name</th>
