--- a/10H/10H/Views/AdminMusic/Details.cshtml
+++ b/10H/10H/Views/AdminMusic/Details.cshtml
@@ -31,7 +31,7 @@
 </script>
 <h2>Details</h2>
 
-<div class="details">
+<div class="details jumbotron">
     <h4 style="text-align:center;">Music</h4>
     <hr />
     <dl class="dl-horizontal dl-details">
