--- a/10H/10H/Views/AdminMusic/Index.cshtml
+++ b/10H/10H/Views/AdminMusic/Index.cshtml
@@ -21,7 +21,7 @@
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
-<table class="table">
+<table class="table jumbotron">
     <tr>
         <th>Name</th>
         <th>Artist</th>
