--- a/10H/10H/Views/Home/Index.cshtml
+++ b/10H/10H/Views/Home/Index.cshtml
@@ -33,7 +33,7 @@
     }
 
     function goToDetails(id) {
-        window.location.href = '/AdminMusic/Details/' + id;
+        window.location.href = '/Music/Details/' + id;
     }
 
     function GoToComments(id) {
