--- a/10H/10H/Views/Shared/_Musics.cshtml
+++ b/10H/10H/Views/Shared/_Musics.cshtml
@@ -12,7 +12,7 @@
     }
 </script>
 
-<table class="table">
+<table class="table jumbotron">
     <tr>
         <th>Music</th>
         <th>Name</th>
