--- a/10H/10H/Views/AdminAlbum/Edit.cshtml
+++ b/10H/10H/Views/AdminAlbum/Edit.cshtml
@@ -14,7 +14,7 @@
 {
     @Html.AntiForgeryToken()
 
-    <div class="form-horizontal">
+    <div class="form-horizontal jumbotron">
         <h4>Album</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
