--- a/10H/10H/Views/User/Register.cshtml
+++ b/10H/10H/Views/User/Register.cshtml
@@ -14,7 +14,7 @@
     <h4>Créer un nouveau compte.</h4>
     <hr />
     @Html.ValidationSummary("", new { @class = "text-danger" })
-    <div class="form-group">
+    <div class="form-group jumbotron">
         @Html.LabelFor(m => m.FirstName, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
             @Html.TextBoxFor(m => m.FirstName, new { @class = "form-control" })
