Commit final (j'espere)

--- a/10H/10H/Views/AdminMusic/Details.cshtml
+++ b/10H/10H/Views/AdminMusic/Details.cshtml
@@ -8,7 +8,7 @@
     function BuyMusic(id)
     {
 
-        window.location.href = "/Purchase/BuyConfirmation/"+id;
+        window.location.href = "/Order/Buy/"+id;
     }
     function GoToComments(id) {
         window.location.href = '/Comment/AddComment/' + id;
