--- a/10H/10H/Views/Order/NotEnoughMoney.cshtml
+++ b/10H/10H/Views/Order/NotEnoughMoney.cshtml
@@ -12,6 +12,6 @@
     </p> <br />
     <p>Please go to your account and put more money</p>
     <p>We hope to see you again soon !!</p>
-    @Html.ActionLink("More Money", "ManageSold","User",new { id = @Request.Cookies["userId"]["id"]})
+    @Html.ActionLink("More Money", "ManageSold", "User", new { id = @Request.Cookies["userId"]["id"]}, null)
 </div>
 
